<!--
  ~   Copyright 2019 Prahlad Vidyanand
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<resources>
    <string name="app_name">Movie Scope</string>

    <string name="detail_activity">Movie Details</string>
    <string name="settings_activity">Settings</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>

    <!-- Sort Array Declaration labels-->
    <string name="pref_sort_label">Sort Order</string>
    <string name="pref_sort_most_popular">Most Popular</string>
    <string name="pref_sort_high_rated">Top Rated</string>
    <string name="pref_sort_user_favourite">Favourite</string>


    <!-- Sort Array Declaration values-->
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_most_popular_values">popular</string>
    <string name="pref_sort_high_rated_values">top_rated</string>
    <string name="pref_sort_user_favourite_values">favourite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_need_internet">This application needs Internet connection. Check and Try Again!</string>

    <!-- UI text -->
    <!-- Headline for release date -->
    <string name="heading_release_date">release date</string>
    <!-- Headline for user vote average -->
    <string name="heading_vote_average">votes</string>
    <!-- Runtime text -->
    <string name="no_release_date_found">No release date found</string>
    <string name="no_summary_found">No summary was found</string>

    <string name="movie_data">MOVIE_DATA</string>
    <string name="favourite">favorite</string>
    <string name="trailers_header">TRAILERS</string>
    <string name="reviews_header">REVIEWS</string>
    <string name="overview_header">SYNOPSIS</string>
    <string name="overviewDescription">This is the Movie Description</string>

    <string name="review_language">en-US</string>
    <string name="trailer_language">en-US</string>

    <string name="movie_details_trailer_desc">Play the trailer</string>
</resources>
