<?xml version="1.0" encoding="utf-8"?>

<!--
  ~   Copyright 2019 Prahlad Vidyanand
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_original_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimaryLight"
            android:gravity="fill"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Title" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/imageview_poster"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:background="#fff"
                android:elevation="12dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="2dp"
                android:paddingRight="2dp">

                <TextView
                    android:id="@+id/textview_release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/heading_release_date"
                    android:textColor="#000000"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingLeft="8dp"
                    android:paddingEnd="2dp"
                    android:paddingRight="2dp"
                    android:textSize="@dimen/abc_text_size_large_material"
                    tools:text="22/07/2017" />

                <TextView
                    android:id="@+id/textview_vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingTop="10dp"
                    android:text="@string/heading_vote_average"
                    android:textColor="#000000"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingEnd="2dp"
                    android:paddingRight="2dp"
                    android:textSize="@dimen/abc_text_size_large_material"
                    tools:text="8.8/10" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:onClick="onClickAddMovies"
                        android:src="@android:drawable/btn_star_big_off" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/favourite"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_overview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/overview_header"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:textColor="#000000"
            tools:text="@string/overviewDescription" />

        <LinearLayout
            android:id="@+id/extras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#e0e0e0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/trailers_header"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/trailersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#fff"
                android:elevation="12dp" />


            <TextView
                android:id="@+id/noTrailerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="No trailers available"
                android:textSize="20sp"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#e0e0e0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/reviews_header"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/noReviewView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="No reviews available"
                android:textSize="20sp"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>







